<resources>
    <string name="app_name">EMG Device Client</string>
    <string name="press_to_add_device">Press + to add device</string>
    <string name="add_device_button">AddDeviceButton</string>
    <string name="connect">Connect</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="rssi_value">Rssi Value</string>
    <string name="rssi">RSSI</string>
    <string name="device_name">Device Name</string>
    <string name="mac_address">MAC Address</string>
    <string name="connect_to_device">CONNECT</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_service">unknown service</string>
    <string name="unknown_characteristic">unknown characteristic</string>
    <string name="no_data">no data</string>
    <string name="menu_connect">Connected</string>
    <string name="menu_disconnect">Disconnected</string>
    <string name="gatt_service">Gatt Service</string>
    <string name="start_measure">Start Measure</string>
    <string name="disconnected_emg_device">Disconnected</string>
</resources>