<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:padding="11dp"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/device_name"
                android:textSize="22sp">

            </TextView>

            <TextView
                android:id="@+id/macAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mac_address"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="11dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/rssi"
                    android:textSize="22sp">

                </TextView>
                <TextView
                    android:id="@+id/rssiValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/rssi_value"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>

            <Button
                android:id="@+id/connectBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/connect_to_device">

            </Button>


    </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>